# moonbots

./: .coverage  .env  .env.schema  .gitignore  AGENTS.md  Dockerfile.bot  README.md  conftest.py  docker-compose.yml  env.d.ts  env.example  fix_002.md  main.py  pyproject.toml
.omc/: prd.json  progress.txt  project-memory.json
.omc/sessions/: b767b6fb-a668-4e9b-977a-977da9a3dd53.json  bc647f1b-93f0-4e76-b284-fddd86957e4b.json
.omc/state/: idle-notif-cooldown.json  last-tool-error.json
.pi-lens/: turn-state.json
.pi-lens/cache/: jscpd.meta.json  knip.meta.json  session-start-guidance.meta.json  todo-baseline.meta.json  turn-end-findings-last.json  turn-end-findings-last.meta.json
.pi/swarm/: events.jsonl
.swarm/plans/: 2026-04-15-hmm-regime-bot.md
agents/docs/: ALGO.md  ARCH.md  GUIDE.md  HMM.md  MULTI.md  PLAN.md
agents/fix/: fix_001.md
agents/review/: c001.md  c002.md  c003.md  code_review_claude.md  code_review_gemini.md
backtest/: backtest.py  backtesting_runner.py  optimize.py  report.py  vectorbt_optimizer.py
backtest/data/: fetcher.py  polygon_fetcher.py  yfinance_fetcher.py
backtest/examples/: polygon_backtest.py  yfinance_backtest.py
backtest/strategies/: base.py  open_gate.py  open_gate_mnq.py
dashboard/: app.py
reports/: backtest_report_20260406_171946.txt  equity_curve_yfinance.png.html
scripts/: bot_status.py  create_bot.py  emergency_stop.py  env_loader.py  hmm_backtest.py  pnl_report.py  reset_daily_stats.py  verify_strategy.py
scripts/pine/: ogs-001.pine  (+1 more)
tests/: test_execution.py  test_risk_manager.py  test_strategy.py
(+20 files in other folders)
