[project]
name = "moonbots"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alpaca-py>=0.43.2",
    "backtesting>=0.6.5",
    "flask>=3.1.3",  # Dashboard
    "hmmlearn>=0.3.1",  # HMM regime detection
    "ib-insync>=0.9.86",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "plotly>=6.6.0",
    "polygon>=1.2.8",
    "scikit-learn>=1.6.1",  # Feature normalization
    "scipy>=1.15.3",  # HMM math (solving linear systems)
    "streamlit>=1.56.0",  # Dashboard
    "ta>=0.11.0",
    "vectorbt>=0.28.2",
    "yfinance>=1.2.0",
]

[dependency-groups]
dev = [
    "black>=26.3.1",
    "mypy>=1.20.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.9",
]
